feat: Add cancel search + live progress display (20/200 Leads)
- Backend: POST /searches/{id}/runs/{run_id}/cancel endpoint
- Backend: Cancellation check in search progress callback
- Frontend: Stop button on searches list for running searches
- Frontend: Live progress polling (20/200 Leads instead of 0 Leads)
- Translations: Added 'cancelled' status and 'stop' action for DE/EN/FR/IT

--- a/frontend/public/locales/de/common.json
+++ b/frontend/public/locales/de/common.json
@@ -28,7 +28,8 @@
     "pending": "Ausstehend",
     "running": "Läuft",
     "completed": "Abgeschlossen",
-    "failed": "Fehlgeschlagen"
+    "failed": "Fehlgeschlagen",
+    "cancelled": "Abgebrochen"
   },
   "actions": {
     "cancel": "Abbrechen",
@@ -37,7 +38,8 @@
     "delete": "Löschen",
     "export": "Exportieren",
     "view": "Anzeigen",
-    "loading": "Laden..."
+    "loading": "Laden...",
+    "stop": "Stoppen"
   },
   "countries": {
     "DE": "Deutschland",
