Add billing system with profile page, invoices, and billing addresses

--- a/frontend/public/locales/de/common.json
+++ b/frontend/public/locales/de/common.json
@@ -20,6 +20,7 @@
     "searches": "Suchen",
     "newSearch": "Neue Suche",
     "lists": "Listen",
+    "profile": "Profil",
     "credits": "Credits",
     "buyCredits": "Credits kaufen →",
     "logout": "Abmelden"
