--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -20,6 +20,7 @@
     "searches": "Searches",
     "newSearch": "New Search",
     "lists": "Lists",
+    "profile": "Profile",
     "credits": "Credits",
     "buyCredits": "Buy credits →",
     "logout": "Logout"
