--- a/frontend/public/locales/fr/common.json
+++ b/frontend/public/locales/fr/common.json
@@ -20,6 +20,7 @@
     "searches": "Recherches",
     "newSearch": "Nouvelle recherche",
     "lists": "Listes",
+    "profile": "Profil",
     "credits": "Crédits",
     "buyCredits": "Acheter des crédits →",
     "logout": "Déconnexion"
