--- a/frontend/public/locales/it/common.json
+++ b/frontend/public/locales/it/common.json
@@ -20,6 +20,7 @@
     "searches": "Ricerche",
     "newSearch": "Nuova Ricerca",
     "lists": "Liste",
+    "profile": "Profilo",
     "credits": "Crediti",
     "buyCredits": "Acquista crediti →",
     "logout": "Logout"
